--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 <body class="min-h-screen">
   <header>
-    <app-bar label="COVID 19 INDONESIA" />
+    <app-bar label="COVID 19" />
   </header>
   <main class="pt-6">
     <app-subtitle label="Total di Dunia"></app-subtitle>
     <div class=" body w-11/12 lg:w-5/6 mx-auto clearfix">
       <app-card-list></app-card-list>
     </div>
-    <app-subtitle label="Indonesia VS Tetangga"></app-subtitle>
+    <app-subtitle label="Negara VS Negara"></app-subtitle>
     <div
       class="md:p-6 h-auto box shadow-md mb-24 body w-11/12 lg:w-5/6 mx-auto clearfix bg-white bg-opacity-25   rounded-lg h-auto md:border-t-2 md:border-r-2 border-white border-opacity-25">
 
