--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         </div>
       </div>
 
+
+
+    </div>
+    <div class="box shadow-lg flow-root bg-black bg-opacity-25  h-auto ">
+      <div class="my-4 block text-white text-center  px-4 py-2 font-sans text-xs">
+        Laman ini dibangun dengan javascript native tanpa Jquery ataupun framework javascript seperti React,Vue,atau
+        Angular <br>
+        Namun dibangun dengan ES6,TailwindCSS,ChartJS dan Webpack untuk Submission Dicoding Fundamental Website <br>
+        instagram : @danang_tp,
+      </div>
     </div>
   </main>
 <script type="text/javascript" src="bundle.js"></script></body>
